// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonRadio snapshots should render with custom options 1`] = `
<div
  className="button-radio"
>
  <button
    className="button-radio__option button-radio__option--selected"
    onClick={[Function]}
    title="One"
  >
    <div>
      Custom option one
    </div>
  </button>
  <button
    className="button-radio__option"
    onClick={[Function]}
    title="Two"
  >
    <div>
      Custom option two
    </div>
  </button>
  <button
    className="button-radio__option"
    onClick={[Function]}
    title="Three"
  >
    <div>
      Custom option three
    </div>
  </button>
</div>
`;

exports[`ButtonRadio snapshots should render with text options 1`] = `
<div
  className="button-radio"
>
  <button
    className="button-radio__option button-radio__option--selected"
    onClick={[Function]}
  >
    One
  </button>
  <button
    className="button-radio__option"
    onClick={[Function]}
  >
    Two
  </button>
</div>
`;
